# music

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: chord.rs  composition.rs  composition_arch.rs  decomposition.rs  generation.rs  instrument.rs  key_scale.rs  main.rs  make_base_music.rs  make_bass_music.rs  measure.rs  midi.rs  music_xml.rs  note.rs  overtones.rs  percussion.rs  player.rs  rhythm.rs  sheet_music.rs
src/gui/: mod.rs
